# AIAgentQuest

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
common/functions/: call_function.py  get_file_content.py  get_files_info.py  get_valid_target_path.py  run_python_file.py  write_file.py
common/progress/: db.py  init_user.py  show_progress.py
common/prompts/: system_prompt.py
common/utils/: ui.py
docs/: README.md
docs/LLMs/: llms.md  roles_and_messages.md  system_prompts.md  temperature.md  tokens.md
docs/agents/: agents.md  content_and_parts.md  error_handling.md  function_dispatch.md  guardrails.md  tool_schemas.md
docs/python/: argparse.md  environment_variables.md  main_function.md
docs/security/: path_validation.md
docs/terminal/: cli-basics.md  flags.md  verbose_mode.md
quests/quest_01_first_agent/: README.md
quests/quest_01_first_agent/solution/: main.py
quests/quest_01_first_invocation/: README.md  check.py
quests/quest_01_first_invocation/solution/: main.py
quests/quest_01_first_invocation/starter/: main.py
quests/quest_02_arcane_gauge/: README.md  check.py
quests/quest_03_apprentice_voice/: README.md  check.py
quests/quest_03_aprentice_voice/: README.md
quests/quest_04_arkanum_laws/: README.md  check.py
quests/quest_05_forbidden_directory/: README.md  check.py
quests/quest_06_tool_chest/: README.md  check.py
quests/quest_07_agent_incarnation/: README.md  check.py
quests/quest_08_manifesting_cycle/: README.md
quests/quests_01_first_agent/: README.md  check.py
(+25 files in other folders)
