[project]
name = "aiagentquest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "google-genai>=1.74.0",
    "httpx>=0.28.1",
    "langchain>=1.2.16",
    "langchain-google-genai>=4.2.2",
    "loguru>=0.7.3",
    "mcp>=1.27.0",
    "pydantic>=2.13.3",
    "pypdf>=6.10.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.25.0",
    "uvicorn>=0.46.0",
]
